2003-12-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-xmas-run-at-time): New function.

	* w3m.el (w3m-refresh-at-time): Use it.

2003-12-05  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/sb-tdiary.el (shimbun-get-headers): Erase buffer before
	retrieving.

2003-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-this-url-new-session): Abolish the optional arg.
	(w3m-mouse-view-this-url-new-session): Ditto.

2003-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-buffer-setup): Use `defun' instead of `defsubst'.

2003-12-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-current-anchor-face): Replace backquote with quote.
	(w3m-select-buffer-current-buffer): Ditto.
	(w3m-header-line-insert): Ditto.
	(w3m-about-retrieve): Use `defun' instead of `defsubst'.
	(w3m-cid-retrieve): Ditto.
	(w3m-current-column): Make it a function, not a macro.

2003-11-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-checking-new-news-format): New
	variable.
	(shimbun-verbose): New variable.
	(shimbun-message-enable-logging): New variable.
	(shimbun-headers): Say "Checking new news..." message.
	(shimbun-article): Replace `message' with `shimbun-message'.
	(shimbun-replace-in-string): Move from sb-rss.el.
	(shimbun-message): New function.

	* shimbun/sb-rss.el (shimbun-replace-in-string): Move to
	shimbun.el.

2003-11-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-minor-mode): Run hooks only when this minor mode is
	enabled.
	* w3m-bookmark.el (w3m-bookmark-mode): Ditto.
	* w3m-antenna.el (w3m-antenna-mode): Ditto.

	* w3m-antenna.el (w3m-antenna-alist): Simplified.

2003-11-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-antenna.el: Define a new minor mode `w3m-antenna-mode'.
	(w3m-antenna-mode-map, w3m-antenna-mode): New variables.
	(w3m-antenna-mode, w3m-antenna-mode-setter, w3m-antenna-edit): New
	functions.

	* w3m-bookmark.el (w3m-bookmark-mode): Change its interactive